Possible reuse of instances for Byte, Character, Short, Integer and Long while unmarshalling. Closes #134.