@@ -30,7 +30,7 @@ public class ByteConverter extends AbstractSingleValueConverter {
         if(value < Byte.MIN_VALUE || value > 0xFF) {
             throw new NumberFormatException("For input string: \"" + str + '"');
         }
-        return new Byte((byte)value);
+        return Byte.valueOf((byte)value);
     }
 
 }
