@@ -52,7 +52,7 @@ public class LongConverter extends AbstractSingleValueConverter {
             return Long.decode(str);
         }
         final long num = high | low;
-        return new Long(num);
+        return Long.valueOf(num);
     }
 
 }
